// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationStep should not render without exchange transaction 1`] = `<div />`;

exports[`ConfirmationStep should render 1`] = `
<div>
  <div
    class="flex flex-col space-y-8"
    data-testid="ExchangeForm__confirmation-step"
  >
    <div
      class="flex items-center mx-auto space-x-3"
    >
      <div
        class="sc-bdvvtL kCgesw"
        height="40"
        width="40"
      >
        <svg>
          circle-check-mark.svg
        </svg>
      </div>
      <h2
        class="font-bold text-2xl m-0"
      >
        Transaction is Complete!
      </h2>
    </div>
    <div
      class="flex flex-col space-y-5"
    >
      <div
        class="flex items-center space-x-3"
      >
        <span
          class="flex items-center justify-center w-6 h-6 rounded bg-theme-primary-200 dark:bg-theme-secondary-800 font-semibold"
        >
          1
        </span>
        <h3
          class="font-bold text-lg m-0"
        >
          BTC Input
        </h3>
      </div>
      <div
        class="flex space-x-6"
      >
        <div
          class="flex flex-shrink-0 items-center justify-center w-24 h-24 rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700"
        >
          <svg
            class="w-12"
          >
            wallet.svg
          </svg>
        </div>
        <div
          class="flex flex-col flex-1 space-y-4 overflow-hidden"
        >
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Input Transaction ID
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="overflow-hidden"
                data-testid="ExplorerLink"
              >
                <a
                  class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="#"
                  rel="noopener noreferrer"
                  to="https://blockchair.com/bitcoin/transaction/payinHash"
                >
                  <span
                    class="Link__Content-sc-ec014t-1 fPOlTq"
                  >
                    <span
                      class="inline-flex overflow-hidden"
                    >
                      payinHash
                    </span>
                  </span>
                  <div
                    class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                    data-testid="Link__external"
                    height="16"
                    width="16"
                  >
                    <svg>
                      arrow-external.svg
                    </svg>
                  </div>
                </a>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Exchange  Address
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="overflow-hidden"
                data-testid="ExplorerLink"
              >
                <a
                  class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href="#"
                  rel="noopener noreferrer"
                  to="https://blockchair.com/bitcoin/address/payinAddress"
                >
                  <span
                    class="Link__Content-sc-ec014t-1 fPOlTq"
                  >
                    <span
                      class="inline-flex overflow-hidden"
                    >
                      payinAddress
                    </span>
                  </span>
                  <div
                    class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                    data-testid="Link__external"
                    height="16"
                    width="16"
                  >
                    <svg>
                      arrow-external.svg
                    </svg>
                  </div>
                </a>
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Amount Sent
            </span>
            <div
              class="Label-sc-4akkzw-0 iXzgUi whitespace-nowrap mr-auto"
              color="danger"
            >
              <span
                class="whitespace-nowrap text-lg font-semibold"
                data-testid="Amount"
              >
                - 1 BTC
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-10 -mx-10 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col space-y-5"
    >
      <div
        class="flex items-center space-x-3"
      >
        <span
          class="flex items-center justify-center w-6 h-6 rounded bg-theme-primary-200 dark:bg-theme-secondary-800 font-semibold"
        >
          2
        </span>
        <h3
          class="font-bold text-lg m-0"
        >
           Output
        </h3>
      </div>
      <div
        class="flex space-x-6"
      >
        <div
          class="flex flex-shrink-0 items-center justify-center w-24 h-24 rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700"
        >
          <svg
            class="w-12"
          >
            exchange.svg
          </svg>
        </div>
        <div
          class="flex flex-col flex-1 space-y-4 overflow-hidden"
        >
          <div
            class="flex flex-col space-y-2 w-full"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Output Transaction ID
            </span>
            <span
              class="font-semibold text-lg"
            >
              N/A
            </span>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Your  Address
            </span>
            <div
              class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
            >
              <span
                class="inline-flex overflow-hidden"
              >
                payoutAddress
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="flex flex-col space-y-2"
          >
            <span
              class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
            >
              Amount Received
            </span>
            <div
              class="Label-sc-4akkzw-0 hhvRsd whitespace-nowrap mr-auto"
              color="success"
            >
              <span
                class="whitespace-nowrap text-lg font-semibold"
                data-testid="Amount"
              >
                + 100 ARK
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeForm should render exchange form 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <ul
        class="StepIndicator__StepWrapper-sc-1kbqtlh-1 cTsjIC"
      >
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 dXZskg"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 dXZskg"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 dXZskg"
        />
      </ul>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col"
            data-testid="ExchangeForm__form-step"
          >
            <div
              class="flex space-x-3"
            >
              <div
                class="w-2/5"
              >
                <fieldset
                  class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                >
                  <label
                    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="fromCurrency"
                  >
                    Cryptoasset
                  </label>
                  <div
                    class="relative w-full"
                  >
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="select-list__input"
                          name="fromCurrency"
                          readonly=""
                          tabindex="-1"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="relative w-full"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="fromCurrency-menu"
                        role="combobox"
                      >
                        <label
                          for="fromCurrency-input"
                          id="fromCurrency-label"
                        />
                        <div
                          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                        >
                          <div
                            class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background ring-theme-background"
                          />
                          <div
                            class="relative flex flex-1 h-full"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="fromCurrency-menu"
                              aria-labelledby="fromCurrency-label"
                              autocomplete="off"
                              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                              data-testid="SelectDropdown__input"
                              id="fromCurrency-input"
                              name="fromCurrency"
                              placeholder="Select Cryptoasset"
                              value=""
                            />
                          </div>
                          <div
                            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          >
                            <div
                              class=""
                            >
                              <div
                                class="flex justify-center items-center py-2 px-1"
                                data-testid="SelectDropdown__caret"
                              >
                                <div
                                  class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                                  height="10"
                                  width="10"
                                >
                                  <svg>
                                    caret-down.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <ul
                          aria-labelledby="fromCurrency-label"
                          class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                          id="fromCurrency-menu"
                          role="listbox"
                        />
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="w-3/5"
              >
                <fieldset
                  class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                >
                  <label
                    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="payinAmount"
                  >
                    You Send
                  </label>
                  <div
                    class="relative"
                  >
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                    >
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                          data-testid="InputCurrency"
                          name="payinAmount"
                          placeholder="Enter an amount"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="flex ml-8 space-x-8"
            >
              <div
                class="relative h-20 my-1 border-l border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <div
                  class="absolute w-2 h-2 rounded-full border border-theme-secondary-300 dark:border-theme-secondary-800 bg-theme-background top-1/2 transform -translate-x-1/2 -translate-y-1/2"
                />
              </div>
              <div
                class="flex flex-1 items-center"
              >
                <div
                  class="flex items-center space-x-2 text-sm"
                >
                  <span
                    class="font-semibold text-theme-primary-600 border-b border-theme-primary-600 border-dashed mt-px"
                  >
                    Estimated Rate
                    :
                  </span>
                  <span>
                    N/A
                  </span>
                </div>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 kMtMtx ml-auto"
                  data-testid="ExchangeForm__swap-button"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <div
                      class="sc-bdvvtL fCrhkg"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-down-up.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="space-y-6"
            >
              <div
                class="flex space-x-3"
              >
                <div
                  class="w-2/5"
                >
                  <fieldset
                    class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="toCurrency"
                    >
                      Cryptoasset
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="select-list__input"
                            name="toCurrency"
                            readonly=""
                            tabindex="-1"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="relative w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="toCurrency-menu"
                          role="combobox"
                        >
                          <label
                            for="toCurrency-input"
                            id="toCurrency-label"
                          />
                          <div
                            class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                          >
                            <div
                              class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background ring-theme-background"
                            />
                            <div
                              class="relative flex flex-1 h-full"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="toCurrency-menu"
                                aria-labelledby="toCurrency-label"
                                autocomplete="off"
                                class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                                data-testid="SelectDropdown__input"
                                id="toCurrency-input"
                                name="toCurrency"
                                placeholder="Select Cryptoasset"
                                value=""
                              />
                            </div>
                            <div
                              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="flex justify-center items-center py-2 px-1"
                                  data-testid="SelectDropdown__caret"
                                >
                                  <div
                                    class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                                    height="10"
                                    width="10"
                                  >
                                    <svg>
                                      caret-down.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <ul
                            aria-labelledby="toCurrency-label"
                            class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                            id="toCurrency-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="w-3/5"
                >
                  <fieldset
                    class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                  >
                    <label
                      class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                      data-testid="FormLabel"
                      for="payoutAmount"
                    >
                      You Get
                    </label>
                    <div
                      class="relative"
                    >
                      <div
                        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                      >
                        <div
                          class="relative flex flex-1 h-full"
                        >
                          <input
                            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                            data-testid="InputCurrency"
                            name="payoutAmount"
                            placeholder="Enter an amount"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
              </div>
              <div
                data-testid="ExchangeForm__recipient-address"
              >
                <fieldset
                  class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
                >
                  <label
                    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="recipientWallet"
                  >
                    Recipient Wallet
                  </label>
                  <div>
                    <div
                      class="flex relative items-center w-full text-left"
                      data-testid="SelectRecipient__wrapper"
                    >
                      <div
                        class="relative w-full"
                      >
                        <div
                          class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
                        >
                          <div
                            class="relative flex flex-1 h-full"
                          >
                            <input
                              aria-invalid="false"
                              class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                              data-testid="select-list__input"
                              name="recipientWallet"
                              readonly=""
                              tabindex="-1"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="relative w-full"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="SelectRecipient__dropdown-menu"
                            role="combobox"
                          >
                            <label
                              for="SelectRecipient__dropdown-input"
                              id="SelectRecipient__dropdown-label"
                            />
                            <div
                              class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                              disabled=""
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                                />
                              </div>
                              <div
                                class="relative flex flex-1 h-full"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="SelectRecipient__dropdown-menu"
                                  aria-invalid="false"
                                  aria-labelledby="SelectRecipient__dropdown-label"
                                  autocomplete="off"
                                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                                  data-testid="SelectDropdown__input"
                                  disabled=""
                                  id="SelectRecipient__dropdown-input"
                                  name="recipientWallet"
                                  placeholder="Enter the payout address"
                                  value=""
                                />
                              </div>
                            </div>
                            <ul
                              aria-labelledby="SelectRecipient__dropdown-label"
                              class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                              id="SelectRecipient__dropdown-menu"
                              role="listbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-end mt-8 space-x-3"
        >
          <div
            class="mr-auto"
          >
            <button
              class="link font-semibold text-sm"
              data-testid="ExchangeForm__add-refund-address"
              type="button"
            >
              Add Refund Wallet
            </button>
          </div>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
            data-testid="ExchangeForm__back-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Back
            </div>
          </button>
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
            data-testid="ExchangeForm__continue-button"
            disabled=""
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Continue
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ExchangeForm should render exchange form with id of finished order 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <ul
        class="StepIndicator__StepWrapper-sc-1kbqtlh-1 cTsjIC"
      >
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
      </ul>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col space-y-8"
            data-testid="ExchangeForm__confirmation-step"
          >
            <div
              class="flex items-center mx-auto space-x-3"
            >
              <div
                class="sc-bdvvtL kCgesw"
                height="40"
                width="40"
              >
                <svg>
                  circle-check-mark.svg
                </svg>
              </div>
              <h2
                class="font-bold text-2xl m-0"
              >
                Transaction is Complete!
              </h2>
            </div>
            <div
              class="flex flex-col space-y-5"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="flex items-center justify-center w-6 h-6 rounded bg-theme-primary-200 dark:bg-theme-secondary-800 font-semibold"
                >
                  1
                </span>
                <h3
                  class="font-bold text-lg m-0"
                >
                  BTC Input
                </h3>
              </div>
              <div
                class="flex space-x-6"
              >
                <div
                  class="flex flex-shrink-0 items-center justify-center w-24 h-24 rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700"
                >
                  <svg
                    class="w-12"
                  >
                    wallet.svg
                  </svg>
                </div>
                <div
                  class="flex flex-col flex-1 space-y-4 overflow-hidden"
                >
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Input Transaction ID
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="#"
                          rel="noopener noreferrer"
                          to="https://blockchair.com/bitcoin/transaction/payinHash?from=changenow"
                        >
                          <span
                            class="Link__Content-sc-ec014t-1 fPOlTq"
                          >
                            <span
                              class="inline-flex overflow-hidden"
                            >
                              payinHash
                            </span>
                          </span>
                          <div
                            class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Exchange ARK Address
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="#"
                          rel="noopener noreferrer"
                          to="https://blockchair.com/bitcoin/address/payinAddress?from=changenow"
                        >
                          <span
                            class="Link__Content-sc-ec014t-1 fPOlTq"
                          >
                            <span
                              class="inline-flex overflow-hidden"
                            >
                              payinAddress
                            </span>
                          </span>
                          <div
                            class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Amount Sent
                    </span>
                    <div
                      class="Label-sc-4akkzw-0 iXzgUi whitespace-nowrap mr-auto"
                      color="danger"
                    >
                      <span
                        class="whitespace-nowrap text-lg font-semibold"
                        data-testid="Amount"
                      >
                        - 1 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="px-10 -mx-10 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex flex-col space-y-5"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  class="flex items-center justify-center w-6 h-6 rounded bg-theme-primary-200 dark:bg-theme-secondary-800 font-semibold"
                >
                  2
                </span>
                <h3
                  class="font-bold text-lg m-0"
                >
                  ARK Output
                </h3>
              </div>
              <div
                class="flex space-x-6"
              >
                <div
                  class="flex flex-shrink-0 items-center justify-center w-24 h-24 rounded-xl bg-theme-secondary-200 dark:bg-theme-secondary-700"
                >
                  <svg
                    class="w-12"
                  >
                    exchange.svg
                  </svg>
                </div>
                <div
                  class="flex flex-col flex-1 space-y-4 overflow-hidden"
                >
                  <div
                    class="flex flex-col space-y-2 w-full"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Output Transaction ID
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="#"
                          rel="noopener noreferrer"
                          to="https://explorer.ark.io/transaction/payoutHash"
                        >
                          <span
                            class="Link__Content-sc-ec014t-1 fPOlTq"
                          >
                            <span
                              class="inline-flex overflow-hidden"
                            >
                              payoutHash
                            </span>
                          </span>
                          <div
                            class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Your ARK Address
                    </span>
                    <div
                      class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                    >
                      <span
                        class="overflow-hidden"
                        data-testid="ExplorerLink"
                      >
                        <a
                          class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="Link"
                          href="#"
                          rel="noopener noreferrer"
                          to="https://explorer.ark.io/wallets/payoutAddress"
                        >
                          <span
                            class="Link__Content-sc-ec014t-1 fPOlTq"
                          >
                            <span
                              class="inline-flex overflow-hidden"
                            >
                              payoutAddress
                            </span>
                          </span>
                          <div
                            class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              arrow-external.svg
                            </svg>
                          </div>
                        </a>
                      </span>
                      <span
                        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                      >
                        <button
                          class="relative focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="clipboard-icon__wrapper"
                          type="button"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                  <div
                    class="flex flex-col space-y-2"
                  >
                    <span
                      class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      Amount Received
                    </span>
                    <div
                      class="Label-sc-4akkzw-0 hhvRsd whitespace-nowrap mr-auto"
                      color="success"
                    >
                      <span
                        class="whitespace-nowrap text-lg font-semibold"
                        data-testid="Amount"
                      >
                        + 100 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-end mt-8 space-x-3"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
            data-testid="ExchangeForm__finish-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Go to Portfolio
            </div>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`ExchangeForm should render exchange form with id of pending order 1`] = `
<div>
  <form
    class="space-y-5"
    data-testid="ExchangeForm"
  >
    <div>
      <ul
        class="StepIndicator__StepWrapper-sc-1kbqtlh-1 cTsjIC"
      >
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 bIEtwY"
        />
        <li
          class="StepIndicator__StepStyled-sc-1kbqtlh-0 dXZskg"
        />
      </ul>
      <div
        class="mt-8"
      >
        <div
          data-testid="tab-pabel__active-panel"
        >
          <div
            class="flex flex-col"
            data-testid="ExchangeForm__status-step"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span
                class="font-semibold text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                Transaction ID
                : 
                id
              </span>
              <span
                class="flex text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <button
                  class="relative focus:outline-none ring-focus"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="sc-bdvvtL fCrhkg"
                    height="16"
                    width="16"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
            <div
              class="flex flex-col mt-3 border rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 py-5 px-6"
            >
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  You Send
                </span>
                <span
                  class="whitespace-nowrap text-lg font-semibold"
                  data-testid="Amount"
                >
                  1 BTC
                </span>
              </div>
              <div
                class="flex flex-col space-y-2 mt-4 pt-4 border-t border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  To Address
                </span>
                <div
                  class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
                >
                  <span
                    class="inline-flex overflow-hidden no-ligatures"
                  >
                    payinAddress
                  </span>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <button
                      class="relative focus:outline-none ring-focus"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="sc-bdvvtL fCrhkg"
                        height="16"
                        width="16"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="my-6 flex items-top justify-center px-20"
            >
              <div
                class="flex flex-col w-8 items-center space-y-2"
              >
                <span
                  data-testid="StatusIcon__spinner"
                >
                  <div
                    class="Spinner-sc-1rpx65r-0 lfdpzU"
                    color="info"
                  />
                </span>
                <span
                  class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Awaiting Deposit
                </span>
              </div>
              <div
                class="flex items-center h-8 flex-1 px-2"
              >
                <div
                  class="w-full h-0.5 rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
              </div>
              <div
                class="flex flex-col w-8 items-center space-y-2"
              >
                <div
                  class="w-8 h-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                  data-testid="StatusIcon__empty"
                />
                <span
                  class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Exchanging
                </span>
              </div>
              <div
                class="flex items-center h-8 flex-1 px-2"
              >
                <div
                  class="w-full h-0.5 rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
                />
              </div>
              <div
                class="flex flex-col w-8 items-center space-y-2"
              >
                <div
                  class="w-8 h-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
                  data-testid="StatusIcon__empty"
                />
                <span
                  class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  Sending
                </span>
              </div>
            </div>
            <div
              class="px-10 pt-6 -mx-10 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="flex flex-col space-y-4"
            >
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  You Get
                </span>
                <span>
                  ≈
                   
                  <span
                    class="whitespace-nowrap font-semibold"
                    data-testid="Amount"
                  >
                    100 ARK
                  </span>
                </span>
              </div>
              <div
                class="flex flex-col space-y-2"
              >
                <span
                  class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  To Address
                </span>
                <div
                  class="flex items-center space-x-2 whitespace-nowrap font-semibold"
                >
                  <span
                    class="inline-flex overflow-hidden no-ligatures"
                  >
                    payoutAddress
                  </span>
                  <span
                    class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <button
                      class="relative focus:outline-none ring-focus"
                      data-ring-focus-margin="-m-1"
                      data-testid="clipboard-icon__wrapper"
                      type="button"
                    >
                      <div
                        class="sc-bdvvtL fCrhkg"
                        height="16"
                        width="16"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </button>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="mt-6 py-3 px-6 rounded-lg bg-theme-secondary-100 dark:bg-theme-secondary-800 text-sm"
            >
              If you have any question about your exchange, please contact ChangeNOW support team via email at 
              <a
                class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="#"
                rel="noopener noreferrer"
                to="mailto:support@changenow.io"
              >
                <span
                  class="Link__Content-sc-ec014t-1 fPOlTq"
                >
                  support@changenow.io
                </span>
                <div
                  class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
                  data-testid="Link__external"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="flex items-center justify-end mt-8 space-x-3"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`FormStep should render 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="ExchangeForm__form-step"
  >
    <div
      class="flex space-x-3"
    >
      <div
        class="w-2/5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="fromCurrency"
          >
            Cryptoasset
          </label>
          <div
            class="relative w-full"
          >
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="select-list__input"
                  name="fromCurrency"
                  readonly=""
                  tabindex="-1"
                  value=""
                />
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="fromCurrency-menu"
                role="combobox"
              >
                <label
                  for="fromCurrency-input"
                  id="fromCurrency-label"
                />
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                  disabled=""
                >
                  <div
                    class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background ring-theme-background"
                  />
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="fromCurrency-menu"
                      aria-labelledby="fromCurrency-label"
                      autocomplete="off"
                      class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                      data-testid="SelectDropdown__input"
                      disabled=""
                      id="fromCurrency-input"
                      name="fromCurrency"
                      placeholder="Select Cryptoasset"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="flex justify-center items-center py-2 px-1"
                        data-testid="SelectDropdown__caret"
                      >
                        <div
                          class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                          height="10"
                          width="10"
                        >
                          <svg>
                            caret-down.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <ul
                  aria-labelledby="fromCurrency-label"
                  class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                  id="fromCurrency-menu"
                  role="listbox"
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="w-3/5"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="payinAmount"
          >
            You Send
          </label>
          <div
            class="relative"
          >
            <div
              class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                  data-testid="InputCurrency"
                  name="payinAmount"
                  placeholder="Enter an amount"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
    <div
      class="flex ml-8 space-x-8"
    >
      <div
        class="relative h-20 my-1 border-l border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <div
          class="absolute w-2 h-2 rounded-full border border-theme-secondary-300 dark:border-theme-secondary-800 bg-theme-background top-1/2 transform -translate-x-1/2 -translate-y-1/2"
        />
      </div>
      <div
        class="flex flex-1 items-center"
      >
        <div
          class="flex items-center space-x-2 text-sm"
        >
          <span
            class="font-semibold text-theme-primary-600 border-b border-theme-primary-600 border-dashed mt-px"
          >
            Estimated Rate
            :
          </span>
          <span>
            N/A
          </span>
        </div>
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 kMtMtx ml-auto"
          data-testid="ExchangeForm__swap-button"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="sc-bdvvtL fCrhkg"
              height="16"
              width="16"
            >
              <svg>
                arrow-down-up.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="space-y-6"
    >
      <div
        class="flex space-x-3"
      >
        <div
          class="w-2/5"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="toCurrency"
            >
              Cryptoasset
            </label>
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="toCurrency"
                    readonly=""
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="toCurrency-menu"
                  role="combobox"
                >
                  <label
                    for="toCurrency-input"
                    id="toCurrency-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                    disabled=""
                  >
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background ring-theme-background"
                    />
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="toCurrency-menu"
                        aria-labelledby="toCurrency-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                        data-testid="SelectDropdown__input"
                        disabled=""
                        id="toCurrency-input"
                        name="toCurrency"
                        placeholder="Select Cryptoasset"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="flex justify-center items-center py-2 px-1"
                          data-testid="SelectDropdown__caret"
                        >
                          <div
                            class="sc-bdvvtL Cfvxc transition-transform text-theme-secondary-500"
                            height="10"
                            width="10"
                          >
                            <svg>
                              caret-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="toCurrency-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="toCurrency-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-3/5"
        >
          <fieldset
            class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
          >
            <label
              class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="payoutAmount"
            >
              You Get
            </label>
            <div
              class="relative"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="InputCurrency"
                    name="payoutAmount"
                    placeholder="Enter an amount"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        data-testid="ExchangeForm__recipient-address"
      >
        <fieldset
          class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
        >
          <label
            class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="recipientWallet"
          >
            Recipient Wallet
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
              >
                <div
                  class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
                >
                  <div
                    class="relative flex flex-1 h-full"
                  >
                    <input
                      aria-invalid="false"
                      class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                      data-testid="select-list__input"
                      name="recipientWallet"
                      readonly=""
                      tabindex="-1"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="relative w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <label
                      for="SelectRecipient__dropdown-input"
                      id="SelectRecipient__dropdown-label"
                    />
                    <div
                      class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
                      disabled=""
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                        />
                      </div>
                      <div
                        class="relative flex flex-1 h-full"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="SelectRecipient__dropdown-menu"
                          aria-invalid="false"
                          aria-labelledby="SelectRecipient__dropdown-label"
                          autocomplete="off"
                          class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default text-theme-secondary-text"
                          data-testid="SelectDropdown__input"
                          disabled=""
                          id="SelectRecipient__dropdown-input"
                          name="recipientWallet"
                          placeholder="Enter the payout address"
                          value=""
                        />
                      </div>
                    </div>
                    <ul
                      aria-labelledby="SelectRecipient__dropdown-label"
                      class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReviewStep should render 1`] = `
<div>
  <div
    class="space-y-6"
    data-testid="ExchangeForm__review-step"
  >
    <div
      class="flex flex-col border rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex flex-col py-5 px-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm font-semibold"
        >
          You Send
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 BTC
        </span>
        <span
          class="text-xs font-semibold"
        >
          1 
          BTC
           ≈ 
          <span
            class="whitespace-nowrap"
            data-testid="Amount"
          >
            NaN ARK
          </span>
        </span>
      </div>
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-800 relative"
      >
        <div
          class="absolute flex items-center justify-center w-11 h-11 top-1/2 transform -translate-y-1/2 right-6 bg-theme-background border-theme-secondary-300 dark:border-theme-secondary-800 border rounded-full"
        >
          <div
            class="sc-bdvvtL qGXhc"
            height="20"
            width="20"
          >
            <svg>
              money-coin-swap.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col py-5 px-6"
      >
        <span
          class="text-theme-secondary-500 dark:text-theme-secondary-700 text-sm font-semibold"
        >
          You Get
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 ARK
        </span>
        <span
          class="inline-flex overflow-hidden text-xs font-semibold no-ligatures"
        >
          AYx3T2He3Ubz7H5pycQNG2Cvn6HYzeiC73
        </span>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex items-center space-x-3 w-max cursor-pointer"
      >
        <input
          class="Checkbox-sc-1aq7nos-0 gdmzcT"
          color="success"
          name="hasAgreedToTerms"
          type="checkbox"
        />
        <span>
          I've read and agree to the ChangeNOW 
          <a
            class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://changenow.io/terms-of-use"
          >
            <span
              class="Link__Content-sc-ec014t-1 fPOlTq"
            >
              Terms of Use
            </span>
            <div
              class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
           and 
          <a
            class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
            data-ring-focus-margin="-m-1"
            data-testid="Link"
            href="#"
            rel="noopener noreferrer"
            to="https://changenow.io/privacy-policy"
          >
            <span
              class="Link__Content-sc-ec014t-1 fPOlTq"
            >
              Privacy Policy
            </span>
            <div
              class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
              data-testid="Link__external"
              height="16"
              width="16"
            >
              <svg>
                arrow-external.svg
              </svg>
            </div>
          </a>
        </span>
      </label>
    </fieldset>
  </div>
</div>
`;

exports[`StatusStep should render 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="ExchangeForm__status-step"
  >
    <div
      class="flex items-center space-x-1"
    >
      <span
        class="font-semibold text-xs text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Transaction ID
        : 
        id
      </span>
      <span
        class="flex text-theme-primary-300 dark:text-theme-secondary-600"
      >
        <button
          class="relative focus:outline-none ring-focus"
          data-ring-focus-margin="-m-1"
          data-testid="clipboard-icon__wrapper"
          type="button"
        >
          <div
            class="sc-bdvvtL fCrhkg"
            height="16"
            width="16"
          >
            <svg>
              copy.svg
            </svg>
          </div>
        </button>
      </span>
    </div>
    <div
      class="flex flex-col mt-3 border rounded-xl border-theme-secondary-300 dark:border-theme-secondary-800 py-5 px-6"
    >
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Send
        </span>
        <span
          class="whitespace-nowrap text-lg font-semibold"
          data-testid="Amount"
        >
          1 BTC
        </span>
      </div>
      <div
        class="flex flex-col space-y-2 mt-4 pt-4 border-t border-theme-secondary-300 dark:border-theme-secondary-800"
      >
        <span
          class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          To Address
        </span>
        <div
          class="flex items-center space-x-2 whitespace-nowrap text-lg font-semibold"
        >
          <span
            class="inline-flex overflow-hidden no-ligatures"
          >
            payinAddress
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="my-6 flex items-top justify-center px-20"
    >
      <div
        class="flex flex-col w-8 items-center space-y-2"
      >
        <span
          data-testid="StatusIcon__spinner"
        >
          <div
            class="Spinner-sc-1rpx65r-0 lfdpzU"
            color="info"
          />
        </span>
        <span
          class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Awaiting Deposit
        </span>
      </div>
      <div
        class="flex items-center h-8 flex-1 px-2"
      >
        <div
          class="w-full h-0.5 rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
        />
      </div>
      <div
        class="flex flex-col w-8 items-center space-y-2"
      >
        <div
          class="w-8 h-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="StatusIcon__empty"
        />
        <span
          class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Exchanging
        </span>
      </div>
      <div
        class="flex items-center h-8 flex-1 px-2"
      >
        <div
          class="w-full h-0.5 rounded-l rounded-r bg-theme-secondary-300 dark:bg-theme-secondary-800"
        />
      </div>
      <div
        class="flex flex-col w-8 items-center space-y-2"
      >
        <div
          class="w-8 h-8 rounded-full border-2 border-theme-secondary-300 dark:border-theme-secondary-800"
          data-testid="StatusIcon__empty"
        />
        <span
          class="font-semibold whitespace-nowrap text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Sending
        </span>
      </div>
    </div>
    <div
      class="px-10 pt-6 -mx-10 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    />
    <div
      class="flex flex-col space-y-4"
    >
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          You Get
        </span>
        <span>
          ≈
           
          <span
            class="whitespace-nowrap font-semibold"
            data-testid="Amount"
          >
            100 ARK
          </span>
        </span>
      </div>
      <div
        class="flex flex-col space-y-2"
      >
        <span
          class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          To Address
        </span>
        <div
          class="flex items-center space-x-2 whitespace-nowrap font-semibold"
        >
          <span
            class="inline-flex overflow-hidden no-ligatures"
          >
            payoutAddress
          </span>
          <span
            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
          >
            <button
              class="relative focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="clipboard-icon__wrapper"
              type="button"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="mt-6 py-3 px-6 rounded-lg bg-theme-secondary-100 dark:bg-theme-secondary-800 text-sm"
    >
      If you have any question about your exchange, please contact ChangeNOW support team via email at 
      <a
        class="Link__AnchorStyled-sc-ec014t-0 eeKUfa group ring-focus"
        data-ring-focus-margin="-m-1"
        data-testid="Link"
        href="#"
        rel="noopener noreferrer"
        to="mailto:support@changenow.io"
      >
        <span
          class="Link__Content-sc-ec014t-1 fPOlTq"
        >
          support@changenow.io
        </span>
        <div
          class="sc-bdvvtL fCrhkg flex-shrink-0 duration-200 inline-block text-sm"
          data-testid="Link__external"
          height="16"
          width="16"
        >
          <svg>
            arrow-external.svg
          </svg>
        </div>
      </a>
    </div>
  </div>
</div>
`;
